feat: Delete Kassenbuch feat: Map Member fees to import
